[package]
name = "philharmonic-store"
version = "0.1.0"
edition = "2024"

license = "Apache-2.0 OR MPL-2.0"
repository = "https://github.com/metastable-void/philharmonic-store"
readme = "README.md"
rust-version = "1.85"

keywords = ["philharmonic", "storage", "content-addressed", "entity"]
categories = ["data-structures"]

[dependencies]
async-trait = "0.1"
philharmonic-types = "0.3.3"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
