[package]
name = "philharmonic-store"
version = "0.1.2"
edition = "2024"

license = "Apache-2.0 OR MPL-2.0"
repository = "https://github.com/metastable-void/philharmonic-store"
readme = "README.md"
rust-version = "1.88"
description = "Storage substrate traits for the Philharmonic workflow orchestration system: content store, identity store, entity store. Backend-agnostic; implementations in companion crates."

keywords = ["philharmonic", "storage", "content-addressed", "entity"]
categories = ["data-structures"]

[dependencies]
async-trait = "0.1"
philharmonic-types = "0.3.5"
serde = { version = "1", features = ["derive"] }
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"
overflow-checks = true
